--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "express": "4.21.0",
     "express-rate-limit": "7.4.0",
     "helmet": "7.1.0",
-    "http-status-codes-codes": "^2.3.0",
+    "http-status-codes": "^2.3.0",
     "lodash": "4.17.21",
     "moment": "^2.30.1",
     "morgan": "1.10.0",
