--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -1,14 +1,8 @@
-version: '3.4'
-
 services:
-  backend:
-    image: backend
+  server:
     build:
       context: .
-      dockerfile: ./Dockerfile
     env_file:
       - .env
     ports:
       - 8000:8000
-      - 9229:9229
-    command: ['node', '--inspect=0.0.0.0:9229', 'index.js']
