--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,7 @@
-version: '3.4'
-
 services:
-  backend:
-    image: backend
+  server:
     build:
       context: .
-      dockerfile: ./Dockerfile
     env_file:
       - .env
     ports:
