--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "lint-staged": {
     "*.ts": [
       "npm run lint",
-      "npm run lint:fix",
-      "git add ."
+      "npm run lint:fix"
     ]
   },
   "keywords": [],
