--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/cors": "2.8.17",
     "@types/lodash": "4.17.9",
     "@types/morgan": "1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "22.5.5",
     "@types/nodemailer": "^6.4.16",
     "@types/passport": "1.0.16",
@@ -61,6 +62,7 @@
     "cloudinary": "^2.5.1",
     "compression": "1.7.4",
     "cors": "2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "16.4.5",
     "express": "4.21.0",
     "express-rate-limit": "7.4.0",
@@ -69,6 +71,7 @@
     "lodash": "4.17.21",
     "moment": "^2.30.1",
     "morgan": "1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
