--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "nodemailer": "^6.9.15",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
+    "uuid": "^11.0.3",
     "winston": "3.14.2",
     "xss": "1.0.15",
     "zod": "3.23.8"
