--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "npx nodemon",
-    "build": "rimraf ./dist && tsc && tsc-alias",
+    "build": "rimraf ./dist && tsc && tsc-alias && cp -r src/scripts dist/scripts",
     "start": "node dist/index.js",
     "db:push": "npx prisma db push",
     "lint": "eslint .",
