--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/morgan": "1.9.9",
     "@types/multer": "^1.4.12",
     "@types/node": "22.5.5",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.16",
     "@types/passport": "1.0.16",
     "@types/passport-jwt": "4.0.1",
@@ -72,6 +73,7 @@
     "moment": "^2.30.1",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
