--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/nodemailer": "^6.4.16",
     "@types/passport": "1.0.16",
     "@types/passport-jwt": "4.0.1",
+    "@types/request-ip": "^0.0.41",
     "@typescript-eslint/eslint-plugin": "8.6.0",
     "@typescript-eslint/parser": "8.6.0",
     "eslint": "9.11.0",
@@ -77,6 +78,7 @@
     "nodemailer": "^6.9.15",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
+    "request-ip": "^3.3.0",
     "uuid": "^11.0.3",
     "winston": "3.14.2",
     "xss": "1.0.15",
